--- a/styles-large.css
+++ b/styles-large.css
@@ -9,7 +9,7 @@ body {
     flex-direction: column;
     align-items: center;
 }
-
+//sjsj
 .section-top, .section-bottom {
     height: 100vh; 
     background-color: #e0e0e0; 
